--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <body>
-        <h1> Welcome! Hello...Yes!!  </h1>
+        <h1> <font color="FF0000"> Welcome! Hello...Yes!! </font>  </h1>
         <h2> Please enter items that you would like to sell? </h2>
         <form method="POST" action="/">
             {{ form.csrf_token }}
