--- a/templates/success.html
+++ b/templates/success.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <title>Freecycle - sharing econmomy that cares!</title>
+    <link rel="icon" href="static/icon.png" type="image/png">
+    <style>
+    body {
+      background-color: black;
+      color: white;
+      text-align:center;
+    }
+    </style> 
+  </head>
     <body>
-        <h1> These are the items that are on Sale! </h1>
-
+        <h1><style="text-align:center"><font color="gold"> These are the items that are on Sale! </font> </h1>
         {{ table }}
     
     </body>
