"added simple demo channges line"

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,16 @@
     </style> 
   </head>
   <body>
+
     <header>
+        
+        <!--
         <h1 style="text-align:center"><font color="gold">Old is gold</font></h1>
+      -->
+      
+        <h1 style="text-align:center"><font color="gold">Recycle the right way!</font></h1>
     </header>
+
       <form method="POST" action="/" style="text-align:center; vertical-align:middle">
             {{ form.csrf_token }}
             <font color="gold">Item Name</font> {{ form.name(size=20) }}
