--- a/templates/success.html
+++ b/templates/success.html
@@ -12,7 +12,7 @@
     </style> 
   </head>
     <body>
-        <h1><style="text-align:center"><font color="gold"> These are the items that are on Sale! </font> </h1>
+        <h1><style="text-align:center"><font color="gold"> These are the items that are Available! </font> </h1>
         {{ table }}
     
     </body>
